--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,15 +1,9 @@
+@import url("../css/homepage-nav.css");
+
 *{
     margin: 0;
-    padding: 0;    
-}
-:root {
-  --primary: #fff;
-  --secondary: #8fc0e3;
-  --tertiary: #4b7a5b;
-  --fourth: #707173;
-
-  --soft: Arial, Helvetica, sans-serif;
-  --strong: Georgia, "Times New Roman", Times, serif;
+    padding: 0; 
+    outline: 0;   
 }
 
 
@@ -26,7 +20,7 @@ html{
     margin-bottom: 10px;
     border-style:groove;
     border-color: var(--fourth);
-    background-color: var(--primary);
+    background-color: var(--suppliment);
 }
 
 .info-container{
@@ -210,7 +204,7 @@ p{
 }
 
 
-.OrderTable tr:nth-child(even){background-color: var(--header)}
+.OrderTable tr:nth-child(even){background-color: var(--suppliment)}
 
 
 .paymentRow{
